# pdi_rickandmorty

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
pdi_rickandmorty/: app.py  main.py
