[tool.poetry]
name = "pdi-rickandmorty"
version = "0.1.0"
description = ""
authors = ["Milena Tanioka <taniomi@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
mysql-connector = "^2.2.9"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
